<resources>
    <string name="app_name">Libreria</string>
    <string name="accecer_libreria">ACCECER\nLIBRERIA</string>
    <string name="login">Inicio sesión</string>
    <string name="singup">Registro</string>
    <string name="list_all_books">Lista completa de libros</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="pedirLibro">Pedir</string>
    <string name="activity_main1name">Libreria</string>
    <string name="activity_main2name">Iniciar sesion</string>
    <string name="activity_main3name">Libros</string>
    <string name="activity_main4name">Agregar o editar libro</string>
    <string name="activity_main5name">Fromulario prestamo</string>
    <string name="activity_main6name">Mis libros</string>
    <string name="activity_main7name">Registrar usuario</string>
    <string name="activity_main8name">Libros</string>
    <string name="activity_main9name">Visor PDF</string>
    <string name="guardar">Guardar</string>
    <string name="datos_libro_avanzados">Datos libro\navanzados</string>
    <string name="autor">Autor</string>
    <string name="titulo_libro">Titulo libro</string>
    <string name="fecha_aaaa_mm_dd">Fecha aaaa/mm/dd</string>
    <string name="mis_prestamos">Mis prestamos</string>
    <string name="solicitar">Solicitar</string>
    <string name="devolver">Devolver</string>
    <string name="leer_pdf">Leer PDF</string>
    <string name="book_cover">Descripcion imagen</string>
    <string name="mas_ndatos">Mas\ndatos</string>
    <string name="usuario">Usuario</string>
    <string name="verifica">Verifica</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="direccion">Direccion</string>
    <string name="stock">Stock</string>
    <string name="url_libro_en_pdf">URL libro en PDF</string>
    <string name="genero_literario">Genero literario</string>
    <string name="titulo">Titulo</string>
</resources>