<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <!-- BOTON DEL LOGIN -->

    <!-- BOTON DEL SIGN UP -->
    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        app:backgroundTint="@color/app_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tifDate"
        app:layout_constraintVertical_bias="0.04"
        app:strokeColor="@color/app_btn_border_color"
        app:strokeWidth="2sp" />

    <!-- BOTON DEL MOSTRAR VIDEOS PARA
    AQUELLOS QUE QUEIREN OJERAR ANTES DE CREAR USUARIO-->

    <Button
        android:id="@+id/btnSingup"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        app:backgroundTint="@color/app_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/tifDate"
        app:layout_constraintVertical_bias="0.04"
        app:strokeColor="@color/app_btn_border_color"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/btnShowAllBooks"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:text="@string/list_all_books"
        android:textColor="@color/app_text_color"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.04"
        app:strokeColor="@color/app_btn_border_color"
        app:strokeWidth="2sp" />

    <!-- TEXT INPUT EDIT TEST DE EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tifEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxEms="14"
        android:minEms="14"
        app:boxStrokeColor="@color/app_color_dark"
        app:boxStrokeWidth="2sp"
        app:hintTextColor="@color/app_color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:startIconDrawable="@drawable/icons8_enter_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiefAutor"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/app_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXT INPUT EDIT TEST DE CONTRASEÑA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tifDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:maxEms="14"
        android:minEms="14"
        app:boxStrokeColor="@color/app_color_dark"
        app:boxStrokeWidth="2sp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/app_color_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tifEmail"
        app:layout_constraintVertical_bias="0.020"
        app:startIconDrawable="@drawable/icons8_password_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiefDate"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/app_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>